new feature added

--- a/newfine.html
+++ b/newfine.html
@@ -6,5 +6,6 @@
     <title>shrutik</title>
 </head>
 <body><paragraph>this is new paragraph</paragraph><h2>this is the heading<h2>   
+<paragraph>this is a new feature</paragraph>
 </body>
 </html>
