initial commit on this branch

--- a/newfine.html
+++ b/newfine.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shrutik</title>
 </head>
-<body><paragraph>this is new paragraph</paragraph><h2>this is the heading<h2>   
+<body><paragraph>this is new paragraph</paragraph><h2>this is the heading<h2>  
+<paragraph>this is new feature</paragraph>
 </body>
 </html>
