--- a/newfine.html
+++ b/newfine.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <paragraph>this is new paragraph</paragraph><h2>this is the heading<h2>
-    <paragraph>this is a new feature</paragraph>
+    <paragraph>this is a new feature {button}</paragraph>
 </body>
 </html>
