--- a/newfine.html
+++ b/newfine.html
@@ -7,5 +7,9 @@
 </head>
 <body><paragraph>this is new paragraph</paragraph><h2>this is the heading<h2>  
 <paragraph>this is new feature{dropdown}</paragraph>
+
+<body>
+    <paragraph>this is new paragraph</paragraph><h2>this is the heading<h2>
+    <paragraph>this is new feature{button}</paragraph>
 </body>
 </html>
